Fix Overflow

--- a/sass/global/_global.scss
+++ b/sass/global/_global.scss
@@ -12,6 +12,7 @@ html,
 body {
   position: relative;
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
